# alazab_site

./: .dockerignore  .env  .env.example  COMPLETION_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FRAPPE_DEPLOYMENT.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  requirements.txt  setup.py  vite.config.ts
.github/workflows/: npm-publish-github-packages.yml
alazab_site/config/: docs.py
alazab_site/src/: App.tsx
apps/alazab_portal/: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
apps/alazab_portal/alazab_portal/: hooks.py  modules.txt
apps/alazab_portal/alazab_portal/www/: portal.html  portal.py
config/: site_config.json
nginx/: app.conf  frappe-site.conf.example
public/: manifest.json  robots.txt  sitemap.xml  sw.js
scripts/: deploy-to-frappe.sh
src/: App.tsx  index.css  main.tsx
src/components/: About.tsx  ChatbotFloatingButton.tsx  Contact.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  Hero.tsx  OptimizedImage.tsx  PremiumServices.tsx  Projects.tsx  Services.tsx  SkeletonLoader.tsx
src/constants/: data.ts
src/data/: materialPricesData.ts  projectsData.ts
src/hooks/: index.ts  useFormState.ts  useLazyLoad.ts  usePerformanceOptimization.ts  useProject.ts  useServiceWorker.ts
src/lib/: validation.ts
src/pages/: AdminDashboard.tsx  ChatbotPage.tsx  Index.tsx  MaintenanceList.tsx  MaintenanceReports.tsx  MaintenanceRequest.tsx  MaintenanceRequestDetails.tsx  MaintenanceTracking.tsx  MaterialPricesPage.tsx  (+4 more)
(+72 files in other folders)
