[project]
name = "alazab_portal"
authors = [
    { name = "Al-Azab", email = "info@alazab.com"}
]
description = "Frappe wrapper for Al-Azab React/Vite SPA portal"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "F821",
    "F841",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF010",
    "RUF012",
    "RUF015",
    "RUF031",
    "RUF052",
    "RUF055",
    "UP030",
    "UP031",
    "UP032",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
